# protocol-imaging

./: .gitignore  INTEGRATION_GUIDE.md  LICENSE  README.md  build.bat  protocol-imaging.spec  pyproject.toml  requirements.txt  run.bat  run_debug.bat
app/: __main__.py  cli.py  main.py
app/capture/: auto_capturer.py  recorder.py  window_capture.py
app/control/: game_controller.py
app/export/: png_export.py
app/image/: align.py  annotate.py  preprocess.py  stitch.py
app/project/: model.py  storage.py
app/ui/: main_window.py
app/ui/widgets/: annotation_overlay.py  calibration_dialog.py
docs/: capture-plan.md  migration-to-maaend.md
docs/plans/: capture-grid-plan.md  endfield_base_topdown_exporter.md  endfield_base_topdown_exporter_README.md
maaend-integration/agent/go-service/protocolimaging/: action.go  register.go  types.go
maaend-integration/assets/locales/interface/: en_us.json  zh_cn.json
maaend-integration/assets/resource/pipeline/: ProtocolImaging.json
maaend-integration/assets/tasks/: ProtocolImaging.json
tests/: test_align.py  test_annotate.py  test_integration_pipeline.py  test_png_export.py  test_preprocess.py  test_preprocess_ext.py  test_project_model.py  test_project_storage.py  test_stitch.py
