[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-imaging"
version = "0.1.0"
description = "协议映射：终末地基地全景快照成像工具"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Cn47mP", email = "233@cn47mp.moe" },
]
dependencies = [
  "opencv-python>=4.8.0",
  "mss>=9.0.0",
  "numpy>=1.24.0",
  "Pillow>=10.0.0",
  "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[project.scripts]
protocol-imaging = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
